ola-parser/src/testdata/syntaxTests/specialFunctions/abidecode/abi_decode_storage.sol
// This restriction might be lifted in the future
contract C {
  fn f() {
    abi.decode("abc", (bytes storage));
  }
}
// ----
// ParserError 2314: (109-116): Expected ',' but got 'storage'
